--- a/kit.qmd
+++ b/kit.qmd
@@ -1,59 +1,34 @@
 ---
-title: "Kit"
+title: "Personalised Recovery and Resilience Kit (PRRK)"
 editor: visual
 ---
-
-**Working Document**
-
-1.  Try to visualize structure
-
 ------------------------------------------------------------------------
 
 Kit Intro Outline:
 
 In life, everyone encounters their own unique set of challenges. It is as if each person is given their own plot of land at birth, where they go through life nurturing their land and working through individual challenges to overcome. For some individuals, their challenges can range from pesky weeds or crop pests, which poses an impactful problem that requires a solution.
 
-Some individuals were given pieces of land that face an entirely different array of difficulties. Instead of their difficulties being associated with what's on the land, their challenge may be navigating the land itself. Their plot of land may be prone to events that are extreme and unpredictable, much like earthquakes. The challenges faced by people with BD are one example of this.
+Some individuals were given pieces of land that face an entirely different array of difficulties. Instead of their difficulties being associated with what's on the land, their challenge may be navigating the parcel of land itself. Their plot of land may be prone to events that are extreme and unpredictable, much like earthquakes. The challenges faced by people with BD are one example of this.
 
 ------------------------------------------------------------------------
 
-People with BD face significant risks of engaging in unpredictable, time-limited, yet devastating behaviours such as substance abuse, hypersexuality, relationship breakdown, self-harm, and financial recklessness, but there are gaps in the types of support provided to individuals with a diagnosis of BD, which focuses primarily on regulating mood. These gaps in support have left other challenges experienced by them, including risk-taking and decision-making, largely unresolved. To address this issue, we are creating a personalised recovery and resilience kit. The development of the kit is informed by findings in past and current studies, and co-design methodology.
+People with BD face significant risks of engaging in unpredictable, time-limited, yet devastating behaviours such as substance abuse, hypersexuality, relationship breakdown, self-harm, and financial recklessness, but there are gaps in the types of support provided to individuals with a diagnosis of BD, which focuses primarily on regulating mood. These gaps in support have left other challenges experienced by them, including risk-taking and decision-making, largely unresolved. 
 
+This is why we are working on the Personalised Recovery and Resilience Kit (PRRK)—a participatory approach inspired by the precision and wisdom of Japanese craftsmanship and the transformative potential of human-AI collaboration. You may find that alternative metaphors fit the structure of the kit, and we hope that you feel free to personalize your individual kit by creating your own personal metaphor, if you wish. However, for the purpose of creating a general outline for this kit, we are using the structurally supportive and sound principles of Japanese craftmanship. Below you will find the kit, where you can click on each section to learn more about the different elements.
 
-::: {.callout-note collapse=true}
+------------------------------------------------------------------------
+**The Kit**
+
+::: panel-tabset
 ## Why This Matters
 
 ![](images/whythismatters.png){width="80" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
 
 **Why This Matters**
 
-An individual’s experience with Bipolar Disorder can bring on challenges, such as feelings of uncertainty, loss of control, hopelessness, and intense fluctuations of mood. For those with BD, balancing responsibilities and making decisions can feel like an impossible task. It can feel hard to connect with others and manage both physical and mental health. This kit is designed to give individuals with BD an organized and cohesive list of support and methods to balance the hardships of life in order to overcome the areas that feel out of control.
+Bipolar Disorder (BD) is a complex mental health condition that profoundly impacts those living with it, as well as their families and communities. Despite advancements in treatments and technologies, managing BD often requires more than clinical interventions—it demands empathy, lived experience, creativity, and adaptability. These human qualities remain irreplaceable, even in an era of sophisticated technology.
 
-:::
-
-::: {.callout-note collapse=true}
-## The Earthquake Metaphor
-
-![](images/earthquakemetaphor.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
-
-***The Earthquake Metaphor***
-
-Navigating life as a person with bipolar disorder can feel like living on earthquake-prone land. There can be unexpected disruptions to routine, relationships, and well-being that can feel like a complete disturbance to one's individual foundation. However, just as earthquake-resistant structures are built with resilience in mind, individuals can develop strategies to cope with and overcome these challenges.
-
-Inspired by the Japanese pagoda, a structure designed to withstand seismic forces, resilience in individuals with bipolar disorder can be supported by a layered system. A strong sense of self-awareness, values, and purpose provides emotional stability during and in-between mood fluctuation episodes. A strong network of friends, family, support services, and mental health resources acts as protective layers, allowing for support during particularly stressful periods. Developing coping mechanisms, such as mindfulness, self-understanding, and seeking support allows individuals with BD to handle stress and mood fluctuations without feeling overwhelmed. Establishing consistent sleep patterns, balanced nutrition, and regular physical activity provides a solid foundation for mental well-being.
-
-:::
-
-
-::: {.panel-tabset}
-
-## Why This Matters
-
-![](images/whythismatters.png){width="80" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
-
-**Why This Matters**
-
-An individual’s experience with Bipolar Disorder can bring on challenges, such as feelings of uncertainty, loss of control, hopelessness, and intense fluctuations of mood. For those with BD, balancing responsibilities and making decisions can feel like an impossible task. It can feel hard to connect with others and manage both physical and mental health. This kit is designed to give individuals with BD an organized and cohesive list of support and methods to balance the hardships of life in order to overcome the areas that feel out of control.
+By bringing together the lived experiences of individuals with BD, insights from caregivers and mental health professionals, and technological resources, we are crafting a framework that empowers people to navigate their unique journeys with greater confidence and support.
 
 ## The Earthquake Metaphor
 
@@ -61,98 +36,106 @@ An individual’s experience with Bipolar Disorder can bring on challenges, such
 
 ***The Earthquake Metaphor***
 
-Navigating life as a person with bipolar disorder can feel like living on earthquake-prone land. There can be unexpected disruptions to routine, relationships, and well-being that can feel like a complete disturbance to one's individual foundation. However, just as earthquake-resistant structures are built with resilience in mind, individuals can develop strategies to cope with and overcome these challenges.
+Living with Bipolar Disorder (BD) can feel like navigating a landscape prone to sudden, unpredictable earthquakes. The highs and lows, like tremors and aftershocks, can disrupt daily life and leave individuals and their support networks striving to find stability. How do we prepare for such uncertainty while fostering resilience and recovery?
 
-Inspired by the Japanese pagoda, a structure designed to withstand seismic forces, resilience in individuals with bipolar disorder can be supported by a layered system. A strong sense of self-awareness, values, and purpose provides emotional stability during and in-between mood fluctuation episodes. A strong network of friends, family, support services, and mental health resources acts as protective layers, allowing for support during particularly stressful periods. Developing coping mechanisms, such as mindfulness, self-understanding, and seeking support allows individuals with BD to handle stress and mood fluctuations without feeling overwhelmed. Establishing consistent sleep patterns, balanced nutrition, and regular physical activity provides a solid foundation for mental well-being.
+The PRRK draws inspiration from the earthquake-resistant design of Japanese pagodas—structures that have withstood centuries of seismic activity. These pagodas balance flexibility and strength, using principles like interlocking joints and a central pillar to absorb shocks while maintaining stability.
+
+In the context of BD, the pagoda becomes a metaphor for resilience: a framework where each "tier" represents a vital aspect of well-being, from physical and emotional health to social support and coping strategies. Human insights, combined with online resources, help co-create tools that align with individual needs—building a system that adapts to life's challenges, just as the pagoda adapts to the forces of nature.
 
 ## Crafting Resilience
 
-![](images/craftingresilience.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
+![](images/craftingresilience.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***Crafting Resilience***
 
-Resilience is not built overnight—it requires continuous shaping, adaptation, and learning. The symptoms of bipolar disorder can feel overwhelming and out of control, and individuals with BD must learn to navigate their reality by adopting sustainable habits. The Japanese concept of *Kaizen*, meaning continuous improvement, teaches that small, steady refinements in daily routines, social habits, and coping strategies lead to long-term resilience. Rather than expecting perfection, the philosophy of *Wabi-sabi*, which embraces imperfection, reminds individuals to see setbacks as natural and valuable parts of learning. Resilience is about recognizing that challenges happen and can be overcame. Moments of struggle do not define the journey but shape it.
+Resilience isn’t built overnight—it’s an ongoing process of learning, adapting, and growing. In Japanese craftsmanship, principles like *kaizen* (continuous improvement) and wabi-sabi (acceptance of imperfection) provide timeless wisdom that resonates deeply in mental health care.
+
+Kaizen teaches us to embrace incremental, steady progress rather than seeking perfection all at once. In mental health, this might mean celebrating small wins, like sticking to a daily routine or reaching out for support, as these build a foundation for long-term well-being.
+
+*Wabi-sabi*, on the other hand, reminds us to find beauty in imperfection and impermanence. It’s about accepting that life, recovery, and even our coping strategies won’t always be flawless—and that’s okay. For someone living with Bipolar Disorder, this might look like embracing setbacks as opportunities for growth and learning.
+
+For instance, a participant in our project described their recovery journey as a patchwork quilt: each piece imperfect but contributing to a unique, meaningful whole. This quilt, much like resilience itself, is strengthened over time through care and thoughtful effort.
+
 
 ## The Master-Apprentice Relationship
 
-![](images/relationship.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
+![](images/relationship.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***The Master-Apprentice Relationship***
 
-Learning from mentors, peers, and loved ones is crucial in developing resilience. Just as in traditional craftsmanship, where an apprentice learns not only technical skills but also patience and adaptability from a master, people benefit from seeking guidance from experienced individuals. Connecting with others can provide practical advice and emotional support. Supervisors, advisors, coworkers, and colleagues can help individuals navigate career challenges and goals. Joining groups, volunteering, or participating in hobbies fosters a sense of belonging and shared learning, reinforcing the idea that resilience is best developed through community and mentorship. Mentorship creates a ripple effect, empowering both mentor and mentee while enriching the entire community. It’s this collaborative spirit that drives our co-design approach, ensuring the kit reflects real-world challenges and solutions.
-:::
+In craftsmanship, the relationship between master and apprentice is a cornerstone of learning and growth. The master imparts not just skills but also values—patience, precision, and dedication. This same principle plays a pivotal role in mental health care and our PRRK project.
 
+Mentorship fosters collaboration and trust between individuals with BD, caregivers, and mental health professionals. Each brings unique expertise: lived experience, compassionate care, or clinical knowledge. Together, they co-create tools and strategies tailored to individual needs, blending wisdom from every perspective.
 
+For example, one participant shared how a peer mentor—a fellow individual with lived experience of BD—helped them through challenging times. By offering practical advice and emotional support, the mentor modelled resilience and self-compassion, inspiring them to approach their own journey with greater confidence.
 
+Mentorship creates a ripple effect, empowering both mentor and mentee while enriching the entire community. It’s this collaborative spirit that drives our co-design approach, ensuring the PRRK reflects real-world challenges and solutions.
 
-::: columns
-::: {.column width="20%"}
-![](images/craftingresilience.png){fig-align="center" width="130"}
-:::
+## Breaking Down Complexity
 
-::: {.column width="80%"}
-***Crafting Resilience***
-
-Resilience is not built overnight—it requires continuous shaping, adaptation, and learning. The symptoms of bipolar disorder can feel overwhelming and out of control, and individuals with BD must learn to navigate their reality by adopting sustainable habits. The Japanese concept of *Kaizen*, meaning continuous improvement, teaches that small, steady refinements in daily routines, social habits, and coping strategies lead to long-term resilience. Rather than expecting perfection, the philosophy of *Wabi-sabi*, which embraces imperfection, reminds individuals to see setbacks as natural and valuable parts of learning. Resilience is about recognizing that challenges happen and can be overcame. Moments of struggle do not define the journey but shape it.
-:::
-:::
-
-::: columns
-::: {.column width="20%"}
-![](images/relationship.png){fig-align="center" width="140"}
-:::
-
-::: {.column width="80%"}
-***The Master-Apprentice Relationship***
-
-Learning from mentors, peers, and loved ones is crucial in developing resilience. Just as in traditional craftsmanship, where an apprentice learns not only technical skills but also patience and adaptability from a master, people benefit from seeking guidance from experienced individuals. Connecting with others can provide practical advice and emotional support. Supervisors, advisors, coworkers, and colleagues can help individuals navigate career challenges and goals. Joining groups, volunteering, or participating in hobbies fosters a sense of belonging and shared learning, reinforcing the idea that resilience is best developed through community and mentorship. Mentorship creates a ripple effect, empowering both mentor and mentee while enriching the entire community. It’s this collaborative spirit that drives our co-design approach, ensuring the kit reflects real-world challenges and solutions.
-:::
-:::
-
-::: columns
-::: {.column width="20%"}
-![](images/complexity.png){fig-align="center" width="140"}
-:::
-
-::: {.column width="80%"}
+![](images/complexity.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***Breaking Down Complexity***
 
-The challenges an individual with bipolar disorder faces—mood fluctuations, social responsibilities, and decision-makings—can feel overwhelming. However, planning for these challenges and breaking them down into manageable items can make coping with them less daunting. In craftmanship, intricate designs are completed step by step, with patience and attention to detail. Similarly, approaching challenges brought on by bipolar disorder can help individuals build resilience without feeling overwhelmed.
+Complex challenges, like managing Bipolar Disorder (BD), can feel overwhelming. But just as craftsmen approach intricate designs by breaking them into manageable steps, our PRRK adopts a gradual, participatory approach to co-design solutions.
 
-Sleep hygiene and circadian rhythm regulation play a critical role in maintaining emotional stability. A consistent sleep schedule and nightime routine can help prevent fatigue and mood fluctuations. Nutrition is another key factor. Learning easily accessible recipes, prioritizing whole foods, and minimizing reliance on processed meals can support overall well-being. Social connection is equally important. Engaging in social activities, maintaining contact with family, and seeking support from others can provide stability in challenging times. Finally, managing financial pressures and work obligations requires effective time management, realistic goal-setting, and budgeting strategies to reduce unnecessary stress.
-:::
-:::
+This means working collaboratively, step by step, to create tools that are meaningful, practical, and easy to use. Participants—individuals with BD, caregivers, and professionals—contribute insights in stages, ensuring the process is neither rushed nor overwhelming. Each small step builds toward a cohesive framework that reflects the lived realities of managing BD.
 
-::: columns
-::: {.column width="20%"}
-![](images/solutions.png){fig-align="center" width="170"}
-:::
+This step-by-step approach ensures that every voice is heard and that the resulting tools are rooted in real-world needs and experiences.
 
-::: {.column width="80%"}
+## Tailoring Solutions: Respect for Individuality
+
+![](images/solutions.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***Tailoring Solutions: Respect for Individuality***
 
-Every individual's respective challenges are unique, and each person experiences events differently. This kit is designed to be flexible, allowing individuals to customize their strategies based on their personal strengths, challenges, and values. Just as a master craftsman tailors their approach to the unique qualities of different materials, individuals with bipolar disorder can adapt their strategies to fit their own needs. Creating an individualized work, social, and self-care plan helps individuals take ownership of their well-being. Some people may require additional tailored resources and support, depending on if they're experiencing a mood episode, additional mental health concern, or outside constraints. Emerging technologies, such as mental health apps and AI-driven tools, can also provide individuals with personalized coping mechanisms that align with their unique needs.
-:::
-:::
+No two journeys with Bipolar Disorder (BD) are the same, which is why the PRRK is designed with respect for individuality at its core. Inspired by craftsmanship, which honours the unique properties of each material, the PRRK tailors its tools to meet the specific needs, strengths, and vulnerabilities of each person.
 
-::: columns
-::: {.column width="20%"}
-![](images/preparedness.png){fig-align="center" width="170"}
-:::
+Guided by technology, the kit dynamically organises contributions from individuals, caregivers, and professionals into a meaningful, personalised framework. For example, one participant shared how their personalised plan included calming sensory aids for acute distress and journaling prompts to reflect on progress. These tailored strategies helped them feel more in control and supported on their unique journey.
 
-::: {.column width="80%"}
+Personalisation, powered by human insights and AI, ensures that the PRRK adapts to each individual’s evolving needs. This respect for individuality fosters a sense of ownership and empowerment, leading to better outcomes and greater resilience.
+
+## Preparedness for Acute Situations
+
+![](images/preparedness.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
+
 ***Preparedness for Acute Situations***
 
-During high-stress periods, such as social conflicts, personal crises, or mood episodes, individuals need pre-prepared coping strategies to minimize stress and overwhelm. The principle of *Mottainai*, which emphasizes efficiency and resourcefulness, teaches the value of having simple, effective strategies that can be accessed quickly. Techniques such as box breathing, grounding exercises, and structured relaxation can help regulate emotional responses in moments of distress. Keeping a resilience journal, having emergency mental health contacts readily available, and proactively utilizing mental health resources can provide additional layers of security. The ability to anticipate stressors and plan for them in advance allows individuals to maintain stability even in unpredictable situations.
-:::
-:::
+In moments of acute distress, preparedness is everything. Inspired by the principles of *mottainai* (efficiency) and *waza* (mastery through repetition), the PRRK equips individuals with pre-prepared tools designed for quick, effective responses to mental health crises.
 
-::: columns
-::: {.column width="20%"}
-![](images/strength.png){fig-align="center" width="130"}
-:::
+*Mottainai* teaches us to focus on what is essential—using resources purposefully to stabilise a situation without adding unnecessary burden. This translates into simple, efficient interventions like a sensory grounding exercise or a calming mantra that can be quickly accessed when emotions run high.
 
-::: {.column width="80%"}
+Meanwhile, *waza* emphasises the importance of mastering techniques through repetition so they become second nature. For example, one participant shared how practising paced breathing daily helped them instinctively use it during a moment of extreme anxiety, preventing escalation and restoring a sense of calm.
+
+The PRRK incorporates these principles by offering quick-access tools such as breathing exercises, grounding techniques, and sensory aids. These interventions are designed to provide immediate relief while creating space for recovery and reflection.
+
+## Finding Strength in Repair
+
+![](images/strength.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***Finding Strength in Repair***
 
-Living with bipolar disorder can come with a set of unexpected challenges, but growth and transformation come from overcoming obstacles. Inspired by *Kintsugi*, the Japanese art of repairing broken pottery with gold, we recognize that struggles and setbacks can lead to greater resilience and strength. Rather than hiding difficulties, individuals can embrace them as part of their unique journey, understanding that imperfections and challenges contribute to personal growth. Just as a broken object can be repaired in a way that highlights its history, individuals can learn from adversity and emerge stronger, more self-aware, and more adaptable.
+Life’s challenges can leave us feeling broken, but the Japanese art of *kintsugi* reminds us that repair can lead to something even more beautiful. *Kintsugi*, or "repair with gold," involves mending broken pottery with precious metals, highlighting the cracks rather than hiding them. The result? A unique, resilient piece that tells its story through its scars.
+
+In mental health and recovery, *kintsugi* is a powerful metaphor for finding strength in setbacks. The PRRK embraces this philosophy, encouraging individuals to view challenges not as failures but as opportunities for growth and transformation.
+
+Recovery isn’t about erasing what’s broken—it’s about embracing the imperfections and emerging stronger, more vibrant, and uniquely you.
 :::
+
+
+::: {.callout-note collapse="true"}
+## Why This Matters
+
+![](images/whythismatters.png){width="80" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
+
+**Why This Matters**
+
+An individual’s experience with Bipolar Disorder can bring on challenges, such as feelings of uncertainty, loss of control, hopelessness, and intense fluctuations of mood. For those with BD, balancing responsibilities and making decisions can feel like an impossible task. It can feel hard to connect with others and manage both physical and mental health. This kit is designed to give individuals with BD an organized and cohesive list of support and methods to balance the hardships of life in order to overcome the areas that feel out of control.
+:::
+
+::: {.callout-note collapse="true"}
+## The Earthquake Metaphor
+
+![](images/earthquakemetaphor.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
+
+***The Earthquake Metaphor***
+
+Navigating life as a person with bipolar disorder can feel like living on earthquake-prone land. There can be unexpected disruptions to routine, relationships, and well-being that can feel like a complete disturbance to one's individual foundation. However, just as earthquake-resistant structures are built with resilience in mind, individuals can develop strategies to cope with and overcome these challenges.
+
+Inspired by the Japanese pagoda, a structure designed to withstand seismic forces, resilience in individuals with bipolar disorder can be supported by a layered system. A strong sense of self-awareness, values, and purpose provides emotional stability during and in-between mood fluctuation episodes. A strong network of friends, family, support services, and mental health resources acts as protective layers, allowing for support during particularly stressful periods. Developing coping mechanisms, such as mindfulness, self-understanding, and seeking support allows individuals with BD to handle stress and mood fluctuations without feeling overwhelmed. Establishing consistent sleep patterns, balanced nutrition, and regular physical activity provides a solid foundation for mental well-being.
 :::
