--- a/kit.qmd
+++ b/kit.qmd
@@ -1,10 +1,12 @@
 ---
 title: "Personalised Recovery and Resilience Kit (PRRK)"
-editor: visual
+format: 
+  html:
+    css:
+      - styles.css
+      - readability.css
 ---
 ------------------------------------------------------------------------
-
-Kit Intro Outline:
 
 In life, everyone encounters their own unique set of challenges. It is as if each person is given their own plot of land at birth, where they go through life nurturing their land and working through individual challenges to overcome. For some individuals, their challenges can range from pesky weeds or crop pests, which poses an impactful problem that requires a solution.
 
@@ -20,9 +22,10 @@ This is why we are working on the Personalised Recovery and Resilience Kit (PRRK
 **The Kit**
 
 ::: panel-tabset
-## Why This Matters
 
-![](images/whythismatters.png){width="80" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
+## ![](images/wtm_transparent.png){width=20px style="vertical-align:middle;"} Why This Matters
+
+![](images/wtm_transparent.png){width="80" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
 
 **Why This Matters**
 
@@ -30,35 +33,37 @@ Bipolar Disorder (BD) is a complex mental health condition that profoundly impac
 
 By bringing together the lived experiences of individuals with BD, insights from caregivers and mental health professionals, and technological resources, we are crafting a framework that empowers people to navigate their unique journeys with greater confidence and support.
 
-## The Earthquake Metaphor
+## ![](images/earthquakemetaphor_transparent.png){width=30px style="vertical-align:middle;"} The Earthquake Metaphor
 
-![](images/earthquakemetaphor.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
+![](images/earthquakemetaphor_transparent.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
 
 ***The Earthquake Metaphor***
 
 Living with Bipolar Disorder (BD) can feel like navigating a landscape prone to sudden, unpredictable earthquakes. The highs and lows, like tremors and aftershocks, can disrupt daily life and leave individuals and their support networks striving to find stability. How do we prepare for such uncertainty while fostering resilience and recovery?
 
-The PRRK draws inspiration from the earthquake-resistant design of Japanese pagodas—structures that have withstood centuries of seismic activity. These pagodas balance flexibility and strength, using principles like interlocking joints and a central pillar to absorb shocks while maintaining stability.
+By using a second metaphor, the PRRK draws inspiration from the earthquake-resistant design of Japanese pagodas—structures that have withstood centuries of seismic activity. These pagodas balance flexibility and strength, using principles like interlocking joints and a central pillar to absorb shocks while maintaining stability.
 
-In the context of BD, the pagoda becomes a metaphor for resilience: a framework where each "tier" represents a vital aspect of well-being, from physical and emotional health to social support and coping strategies. Human insights, combined with online resources, help co-create tools that align with individual needs—building a system that adapts to life's challenges, just as the pagoda adapts to the forces of nature.
+In the context of BD, the pagoda becomes a metaphor for resilience: a framework where each "tier" represents a vital aspect of well-being, from physical and emotional health to social support and coping strategies. Human insights, combined with online resources, help co-create tools that align with individual needs—building a system that adapts to life's challenges, just as the pagoda adapts to the forces of nature. To access a full description of the pagoda metaphor, click here.
 
-## Crafting Resilience
+## ![](images/craftingresilience_transparent.png){width=25px style="vertical-align:middle;"} Crafting Resilience
 
-![](images/craftingresilience.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
+![](images/craftingresilience_transparent.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
+
 ***Crafting Resilience***
 
-Resilience isn’t built overnight—it’s an ongoing process of learning, adapting, and growing. In Japanese craftsmanship, principles like *kaizen* (continuous improvement) and wabi-sabi (acceptance of imperfection) provide timeless wisdom that resonates deeply in mental health care.
+Resilience isn’t built overnight—it’s an ongoing process of learning, adapting, and growing. In Japanese craftsmanship, principles like *kaizen* (continuous improvement) and *wabi-sabi* (acceptance of imperfection) provide timeless wisdom that resonates deeply in mental health care.
 
-Kaizen teaches us to embrace incremental, steady progress rather than seeking perfection all at once. In mental health, this might mean celebrating small wins, like sticking to a daily routine or reaching out for support, as these build a foundation for long-term well-being.
+*Kaizen* teaches us to embrace incremental, steady progress rather than seeking perfection all at once. In mental health, this might mean celebrating small wins, like sticking to a daily routine or reaching out for support, as these build a foundation for long-term well-being.
 
 *Wabi-sabi*, on the other hand, reminds us to find beauty in imperfection and impermanence. It’s about accepting that life, recovery, and even our coping strategies won’t always be flawless—and that’s okay. For someone living with Bipolar Disorder, this might look like embracing setbacks as opportunities for growth and learning.
 
-For instance, a participant in our project described their recovery journey as a patchwork quilt: each piece imperfect but contributing to a unique, meaningful whole. This quilt, much like resilience itself, is strengthened over time through care and thoughtful effort.
+For instance, a participant in our project described their recovery journey as a patchwork quilt: each piece imperfect but contributing to a unique, meaningful whole. This quilt, much like resilience itself, is strengthened over time through care and thoughtful effort. 
 
 
-## The Master-Apprentice Relationship
+## ![](images/relationship_transparent.png){width=30px style="vertical-align:middle;"} The Master-Apprentice Relationship
 
-![](images/relationship.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
+![](images/relationship_transparent.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
+
 ***The Master-Apprentice Relationship***
 
 In craftsmanship, the relationship between master and apprentice is a cornerstone of learning and growth. The master imparts not just skills but also values—patience, precision, and dedication. This same principle plays a pivotal role in mental health care and our PRRK project.
@@ -69,9 +74,9 @@ For example, one participant shared how a peer mentor—a fellow individual with
 
 Mentorship creates a ripple effect, empowering both mentor and mentee while enriching the entire community. It’s this collaborative spirit that drives our co-design approach, ensuring the PRRK reflects real-world challenges and solutions.
 
-## Breaking Down Complexity
+## ![](images/complexity_transparent.png){width=30px style="vertical-align:middle;"} Breaking Down Complexity
 
-![](images/complexity.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
+![](images/complexity_transparent.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***Breaking Down Complexity***
 
 Complex challenges, like managing Bipolar Disorder (BD), can feel overwhelming. But just as craftsmen approach intricate designs by breaking them into manageable steps, our PRRK adopts a gradual, participatory approach to co-design solutions.
@@ -80,9 +85,9 @@ This means working collaboratively, step by step, to create tools that are meani
 
 This step-by-step approach ensures that every voice is heard and that the resulting tools are rooted in real-world needs and experiences.
 
-## Tailoring Solutions: Respect for Individuality
+## ![](images/solutions_transparent.png){width=30px style="vertical-align:middle;"} Tailoring Solutions: Respect for Individuality
 
-![](images/solutions.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
+![](images/solutions_transparent.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***Tailoring Solutions: Respect for Individuality***
 
 No two journeys with Bipolar Disorder (BD) are the same, which is why the PRRK is designed with respect for individuality at its core. Inspired by craftsmanship, which honours the unique properties of each material, the PRRK tailors its tools to meet the specific needs, strengths, and vulnerabilities of each person.
@@ -91,9 +96,9 @@ Guided by technology, the kit dynamically organises contributions from individua
 
 Personalisation, powered by human insights and AI, ensures that the PRRK adapts to each individual’s evolving needs. This respect for individuality fosters a sense of ownership and empowerment, leading to better outcomes and greater resilience.
 
-## Preparedness for Acute Situations
+## ![](images/preparedness_transparent.png){width=30px style="vertical-align:middle;"} Preparedness for Acute Situations
 
-![](images/preparedness.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
+![](images/preparedness_transparent.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 
 ***Preparedness for Acute Situations***
 
@@ -105,37 +110,18 @@ Meanwhile, *waza* emphasises the importance of mastering techniques through repe
 
 The PRRK incorporates these principles by offering quick-access tools such as breathing exercises, grounding techniques, and sensory aids. These interventions are designed to provide immediate relief while creating space for recovery and reflection.
 
-## Finding Strength in Repair
+## ![](images/strength_transparent.png){width=30px style="vertical-align:middle;"} Finding Strength in Repair
 
-![](images/strength.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
+![](images/strength_transparent.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***Finding Strength in Repair***
 
-Life’s challenges can leave us feeling broken, but the Japanese art of *kintsugi* reminds us that repair can lead to something even more beautiful. *Kintsugi*, or "repair with gold," involves mending broken pottery with precious metals, highlighting the cracks rather than hiding them. The result? A unique, resilient piece that tells its story through its scars.
+Life’s challenges can leave us feeling broken, but the Japanese art of *kintsugi* reminds us that repair can lead to something even more beautiful. 
+
+*Kintsugi*, or "repair with gold," involves mending broken pottery with precious metals, highlighting the cracks rather than hiding them. The result? A unique, resilient piece that tells its story through its scars.
 
 In mental health and recovery, *kintsugi* is a powerful metaphor for finding strength in setbacks. The PRRK embraces this philosophy, encouraging individuals to view challenges not as failures but as opportunities for growth and transformation.
 
 Recovery isn’t about erasing what’s broken—it’s about embracing the imperfections and emerging stronger, more vibrant, and uniquely you.
 :::
 
-
-::: {.callout-note collapse="true"}
-## Why This Matters
-
-![](images/whythismatters.png){width="80" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
-
-**Why This Matters**
-
-An individual’s experience with Bipolar Disorder can bring on challenges, such as feelings of uncertainty, loss of control, hopelessness, and intense fluctuations of mood. For those with BD, balancing responsibilities and making decisions can feel like an impossible task. It can feel hard to connect with others and manage both physical and mental health. This kit is designed to give individuals with BD an organized and cohesive list of support and methods to balance the hardships of life in order to overcome the areas that feel out of control.
-:::
-
-::: {.callout-note collapse="true"}
-## The Earthquake Metaphor
-
-![](images/earthquakemetaphor.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"}
-
-***The Earthquake Metaphor***
-
-Navigating life as a person with bipolar disorder can feel like living on earthquake-prone land. There can be unexpected disruptions to routine, relationships, and well-being that can feel like a complete disturbance to one's individual foundation. However, just as earthquake-resistant structures are built with resilience in mind, individuals can develop strategies to cope with and overcome these challenges.
-
-Inspired by the Japanese pagoda, a structure designed to withstand seismic forces, resilience in individuals with bipolar disorder can be supported by a layered system. A strong sense of self-awareness, values, and purpose provides emotional stability during and in-between mood fluctuation episodes. A strong network of friends, family, support services, and mental health resources acts as protective layers, allowing for support during particularly stressful periods. Developing coping mechanisms, such as mindfulness, self-understanding, and seeking support allows individuals with BD to handle stress and mood fluctuations without feeling overwhelmed. Establishing consistent sleep patterns, balanced nutrition, and regular physical activity provides a solid foundation for mental well-being.
-:::
+[Section with a paragraph asking for feedback and contact information.]
