--- a/kit.qmd
+++ b/kit.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Personalised Recovery and Resilience Kit (PRRK)"
+title: "Personalised Recovery and Resilience Kit (PERRK)"
 format: 
   html:
     css:
@@ -8,15 +8,9 @@ format:
 ---
 ------------------------------------------------------------------------
 
-In life, everyone encounters their own unique set of challenges. It is as if each person is given their own plot of land at birth, where they go through life nurturing their land and working through individual challenges to overcome. For some individuals, their challenges can range from pesky weeds or crop pests, which poses an impactful problem that requires a solution.
-
-Some individuals were given pieces of land that face an entirely different array of difficulties. Instead of their difficulties being associated with what's on the land, their challenge may be navigating the parcel of land itself. Their plot of land may be prone to events that are extreme and unpredictable, much like earthquakes. The challenges faced by people with BD are one example of this.
-
-------------------------------------------------------------------------
-
 People with BD face significant risks of engaging in unpredictable, time-limited, yet devastating behaviours such as substance abuse, hypersexuality, relationship breakdown, self-harm, and financial recklessness, but there are gaps in the types of support provided to individuals with a diagnosis of BD, which focuses primarily on regulating mood. These gaps in support have left other challenges experienced by them, including risk-taking and decision-making, largely unresolved. 
 
-This is why we are working on the Personalised Recovery and Resilience Kit (PRRK)—a participatory approach inspired by the precision and wisdom of Japanese craftsmanship and the transformative potential of human-AI collaboration. You may find that alternative metaphors fit the structure of the kit, and we hope that you feel free to personalize your individual kit by creating your own personal metaphor, if you wish. However, for the purpose of creating a general outline for this kit, we are using the structurally supportive and sound principles of Japanese craftmanship. Below you will find the kit, where you can click on each section to learn more about the different elements.
+This is why we are working on the Personalised Recovery and Resilience Kit (PERRK)—a participatory approach inspired by the precision and wisdom of Japanese craftsmanship and the transformative potential of human-AI collaboration. You may find that alternative metaphors fit the structure of the kit, and we hope that you feel free to personalize your individual kit by creating your own personal metaphor, if you wish. However, for the purpose of creating a general outline for this kit, we are using the structurally supportive and sound principles of Japanese craftmanship. Below you will find the kit, where you can click on each section to learn more about the different elements.
 
 ------------------------------------------------------------------------
 **The Kit**
@@ -41,7 +35,7 @@ By bringing together the lived experiences of individuals with BD, insights from
 
 Living with Bipolar Disorder (BD) can feel like navigating a landscape prone to sudden, unpredictable earthquakes. The highs and lows, like tremors and aftershocks, can disrupt daily life and leave individuals and their support networks striving to find stability. How do we prepare for such uncertainty while fostering resilience and recovery?
 
-By using a second metaphor, the PRRK draws inspiration from the earthquake-resistant design of Japanese pagodas—structures that have withstood centuries of seismic activity. These pagodas balance flexibility and strength, using principles like interlocking joints and a central pillar to absorb shocks while maintaining stability.
+By using a second metaphor, the PERRK draws inspiration from the earthquake-resistant design of Japanese pagodas—structures that have withstood centuries of seismic activity. These pagodas balance flexibility and strength, using principles like interlocking joints and a central pillar to absorb shocks while maintaining stability.
 
 In the context of BD, the pagoda becomes a metaphor for resilience: a framework where each "tier" represents a vital aspect of well-being, from physical and emotional health to social support and coping strategies. Human insights, combined with online resources, help co-create tools that align with individual needs—building a system that adapts to life's challenges, just as the pagoda adapts to the forces of nature. To access a full description of the pagoda metaphor, click here.
 
@@ -66,20 +60,20 @@ For instance, a participant in our project described their recovery journey as a
 
 ***The Master-Apprentice Relationship***
 
-In craftsmanship, the relationship between master and apprentice is a cornerstone of learning and growth. The master imparts not just skills but also values—patience, precision, and dedication. This same principle plays a pivotal role in mental health care and our PRRK project.
+In craftsmanship, the relationship between master and apprentice is a cornerstone of learning and growth. The master imparts not just skills but also values—patience, precision, and dedication. This same principle plays a pivotal role in mental health care and our PERRK project.
 
 Mentorship fosters collaboration and trust between individuals with BD, caregivers, and mental health professionals. Each brings unique expertise: lived experience, compassionate care, or clinical knowledge. Together, they co-create tools and strategies tailored to individual needs, blending wisdom from every perspective.
 
 For example, one participant shared how a peer mentor—a fellow individual with lived experience of BD—helped them through challenging times. By offering practical advice and emotional support, the mentor modelled resilience and self-compassion, inspiring them to approach their own journey with greater confidence.
 
-Mentorship creates a ripple effect, empowering both mentor and mentee while enriching the entire community. It’s this collaborative spirit that drives our co-design approach, ensuring the PRRK reflects real-world challenges and solutions.
+Mentorship creates a ripple effect, empowering both mentor and mentee while enriching the entire community. It’s this collaborative spirit that drives our co-design approach, ensuring the PERRK reflects real-world challenges and solutions.
 
 ## ![](images/complexity_transparent.png){width=30px style="vertical-align:middle;"} Breaking Down Complexity
 
 ![](images/complexity_transparent.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***Breaking Down Complexity***
 
-Complex challenges, like managing Bipolar Disorder (BD), can feel overwhelming. But just as craftsmen approach intricate designs by breaking them into manageable steps, our PRRK adopts a gradual, participatory approach to co-design solutions.
+Complex challenges, like managing Bipolar Disorder (BD), can feel overwhelming. But just as craftsmen approach intricate designs by breaking them into manageable steps, our PERRK adopts a gradual, participatory approach to co-design solutions.
 
 This means working collaboratively, step by step, to create tools that are meaningful, practical, and easy to use. Participants—individuals with BD, caregivers, and professionals—contribute insights in stages, ensuring the process is neither rushed nor overwhelming. Each small step builds toward a cohesive framework that reflects the lived realities of managing BD.
 
@@ -90,11 +84,11 @@ This step-by-step approach ensures that every voice is heard and that the result
 ![](images/solutions_transparent.png){width="90" style="float: left; margin-right: 1em; margin-bottom: 0.5em;"} 
 ***Tailoring Solutions: Respect for Individuality***
 
-No two journeys with Bipolar Disorder (BD) are the same, which is why the PRRK is designed with respect for individuality at its core. Inspired by craftsmanship, which honours the unique properties of each material, the PRRK tailors its tools to meet the specific needs, strengths, and vulnerabilities of each person.
+No two journeys with Bipolar Disorder (BD) are the same, which is why the PERRK is designed with respect for individuality at its core. Inspired by craftsmanship, which honours the unique properties of each material, the PERRK tailors its tools to meet the specific needs, strengths, and vulnerabilities of each person.
 
 Guided by technology, the kit dynamically organises contributions from individuals, caregivers, and professionals into a meaningful, personalised framework. For example, one participant shared how their personalised plan included calming sensory aids for acute distress and journaling prompts to reflect on progress. These tailored strategies helped them feel more in control and supported on their unique journey.
 
-Personalisation, powered by human insights and AI, ensures that the PRRK adapts to each individual’s evolving needs. This respect for individuality fosters a sense of ownership and empowerment, leading to better outcomes and greater resilience.
+Personalisation, powered by human insights and AI, ensures that the PERRK adapts to each individual’s evolving needs. This respect for individuality fosters a sense of ownership and empowerment, leading to better outcomes and greater resilience.
 
 ## ![](images/preparedness_transparent.png){width=30px style="vertical-align:middle;"} Preparedness for Acute Situations
 
@@ -102,13 +96,13 @@ Personalisation, powered by human insights and AI, ensures that the PRRK adapts 
 
 ***Preparedness for Acute Situations***
 
-In moments of acute distress, preparedness is everything. Inspired by the principles of *mottainai* (efficiency) and *waza* (mastery through repetition), the PRRK equips individuals with pre-prepared tools designed for quick, effective responses to mental health crises.
+In moments of acute distress, preparedness is everything. Inspired by the principles of *mottainai* (efficiency) and *waza* (mastery through repetition), the PERRK equips individuals with pre-prepared tools designed for quick, effective responses to mental health crises.
 
 *Mottainai* teaches us to focus on what is essential—using resources purposefully to stabilise a situation without adding unnecessary burden. This translates into simple, efficient interventions like a sensory grounding exercise or a calming mantra that can be quickly accessed when emotions run high.
 
 Meanwhile, *waza* emphasises the importance of mastering techniques through repetition so they become second nature. For example, one participant shared how practising paced breathing daily helped them instinctively use it during a moment of extreme anxiety, preventing escalation and restoring a sense of calm.
 
-The PRRK incorporates these principles by offering quick-access tools such as breathing exercises, grounding techniques, and sensory aids. These interventions are designed to provide immediate relief while creating space for recovery and reflection.
+The PERRK incorporates these principles by offering quick-access tools such as breathing exercises, grounding techniques, and sensory aids. These interventions are designed to provide immediate relief while creating space for recovery and reflection.
 
 ## ![](images/strength_transparent.png){width=30px style="vertical-align:middle;"} Finding Strength in Repair
 
@@ -119,7 +113,7 @@ Life’s challenges can leave us feeling broken, but the Japanese art of *kintsu
 
 *Kintsugi*, or "repair with gold," involves mending broken pottery with precious metals, highlighting the cracks rather than hiding them. The result? A unique, resilient piece that tells its story through its scars.
 
-In mental health and recovery, *kintsugi* is a powerful metaphor for finding strength in setbacks. The PRRK embraces this philosophy, encouraging individuals to view challenges not as failures but as opportunities for growth and transformation.
+In mental health and recovery, *kintsugi* is a powerful metaphor for finding strength in setbacks. The PERRK embraces this philosophy, encouraging individuals to view challenges not as failures but as opportunities for growth and transformation.
 
 Recovery isn’t about erasing what’s broken—it’s about embracing the imperfections and emerging stronger, more vibrant, and uniquely you.
 :::
