--- a/pagoda_closeread.qmd
+++ b/pagoda_closeread.qmd
@@ -9,6 +9,11 @@ format:
       - styles.css
       - readability.css
 ---
+<br>
+<br>
+<br>
+Below you will find a visual and written description of the pagoda as a metaphor for mental wellness. We invite you to read through the text and reflect on each component using our guiding questions.
+
 
 ::: cr-section
 
@@ -35,22 +40,29 @@ Self-Identity</strong></span>
 :::
 
 ::: cr-section
+Take one minute to reflect on these questions. @cr-questions1]{highlight="1,3"}
 
-Take a minute to reflect on thsee questions. @cr-questions1
+::: {#cr-questions1}
+1.	What are three core values that are most important to you, and how do they guide your decisions?
+2.	How has your sense of identity changed or remained the same over the past year?
+3.	What challenges have made you question your values or identity, and how have you responded to them?
 
-| {#cr-questions1 .scale-to-fill}
-| Add question 1 here?
-| Add question 2 here?
-| Add question 3 here?
-
+:::
 :::
 
 ::: cr-section
-**Joint Construction without Nails = Healthy Relationships**
+<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+Joint Construction <br> 
+Without Nails  <br> 
+<br>
+Healthy <br>
+Relationships</strong></span>
 
 :::{focus-on="cr-image2"}
 
 *Ancient Buildings*: The joints in ancient wooden buildings are designed to be flexible, allowing the building to move and sway without snapping or breaking. This flexibility is crucial for absorbing seismic shocks. 
+
+<br>
 
 *Human Experience*: Healthy, flexible relationships that allow for emotional movement and adaptation without rigid expectations can absorb the shocks of mood episodes. Supportive relationships can bend, adjust, and accommodate mood fluctuations without breaking under the strain. These relationships, like family or close friends, provide support while giving space for individual emotional experience.
 :::
@@ -64,16 +76,23 @@ Take a minute to reflect on thsee questions. @cr-questions1
 Take one minute to reflect on these questions. @cr-questions2]{highlight="1,3"}
 
 ::: {#cr-questions2}
-1. Question 1
-2. Question 2
-3. Question 3
+1.	Who are the key people in your life who provide support, and how do they help you during challenging times?
+2.	How do you maintain healthy boundaries in relationships while adapting to new social environments?
+3.	What strategies can you use to build new supportive connections while keeping existing relationships strong?
 :::
 :::
 
 ::: cr-section
-**Multi-Tiered Roofs = Social Support, Layered Resources and Crisis Prevention**
+<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+Multi-Tiered Roofs <br> 
+<br> 
+Social Support, <br>
+Layered Resources <br>
+and Crisis Prevention</strong></span>
 
-*Ancient Buildings*: The multi-tiered roofs in pagodas help distribute the forces of an earthquake, acting like shock absorbers that slow down and spread out the shaking. *Human Experience*: Layered social support systems—including family, friends, healthcare professionals, and community resources—act like the multiple layers of a roof. Each layer provides an additional buffer, spreading out emotional shocks and offering safety nets that can slow down the escalation of risky behaviours. These layers work together to ensure that no single source of support bears the entire load. @cr-image3
+*Ancient Buildings*: The multi-tiered roofs in pagodas help distribute the forces of an earthquake, acting like shock absorbers that slow down and spread out the shaking. 
+<br>
+*Human Experience*: Layered social support systems—including family, friends, healthcare professionals, and community resources—act like the multiple layers of a roof. Each layer provides an additional buffer, spreading out emotional shocks and offering safety nets that can slow down the escalation of risky behaviours. These layers work together to ensure that no single source of support bears the entire load. @cr-image3
 
 ::: {#cr-image3}
 ![](images/pagoda3-01.png)
@@ -81,9 +100,25 @@ Take one minute to reflect on these questions. @cr-questions2]{highlight="1,3"}
 :::
 
 ::: cr-section
-**Symmetrical and Simple Design = Balanced Lifestyle**
+Take one minute to reflect on these questions. @cr-questions3]{highlight="1,3"}
 
-*Ancient Buildings*: The symmetrical and simple designs of ancient buildings help distribute stress evenly during an earthquake, reducing the concentration of forces on any one part of the structure. *Human Experience*: A balanced lifestyle—including time for self-care, work, social engagement, and rest—helps distribute the "emotional load" of life evenly, preventing any one aspect of life from becoming too overwhelming. This balance ensures that even during stressful periods, a person isn’t overwhelmed by any single area (e.g., work stress or relationship issues), reducing the risk of extreme reactions during mood episodes. @cr-image4
+::: {#cr-questions3}
+1.	What are the different layers of support available to you (e.g., friends, family, mental health services), and how do they help you?
+2.	How comfortable do you feel reaching out for support when needed, and what might make it easier for you?
+3.	What proactive steps can you take to strengthen your support network before a crisis occurs?
+:::
+:::
+
+::: cr-section
+<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+Symmetrical and <br> 
+Simple Design <br>
+<br>
+Balanced Lifestyle</strong></span>
+
+*Ancient Buildings*: The symmetrical and simple designs of ancient buildings help distribute stress evenly during an earthquake, reducing the concentration of forces on any one part of the structure. 
+<br>
+*Human Experience*: A balanced lifestyle—including time for self-care, work, social engagement, and rest—helps distribute the "emotional load" of life evenly, preventing any one aspect of life from becoming too overwhelming. This balance ensures that even during stressful periods, a person isn’t overwhelmed by any single area (e.g., work stress or relationship issues), reducing the risk of extreme reactions during mood episodes. @cr-image4
 
 ::: {#cr-image4}
 ![](images/gpagoda4-01.png)
@@ -91,9 +126,26 @@ Take one minute to reflect on these questions. @cr-questions2]{highlight="1,3"}
 :::
 
 ::: cr-section
-**Flexible Wooden Structure = Emotional Adaptability and Coping Skills**
+Take one minute to reflect on these questions. @cr-questions4]{highlight="1,3"}
 
-*Ancient Buildings*: The flexible wooden structure of Japanese buildings allows them to bend and absorb energy without breaking under stress. *Human Experience*: Emotional adaptability and well-developed coping skills (e.g., mindfulness, emotional regulation techniques, therapy) function in a similar way, allowing a person to "bend" with emotional highs and lows without breaking down. These coping skills help an individual manage mood swings in a healthy way, reducing the impact of manic episodes. @cr-image5
+::: {#cr-questions4}
+1.	How do you currently distribute your time between work, social life, self-care, and relaxation?
+2.	What aspects of your routine feel unbalanced, and what small changes could help restore stability?
+3.	If stress levels were rising, what would be the first area in your life that you would adjust to maintain balance?
+:::
+:::
+
+::: cr-section
+<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+Flexible Wooden <br> 
+Structure <br>
+<br>
+Emotional Adapability and<br>
+Coping Skills</strong></span>
+
+*Ancient Buildings*: The flexible wooden structure of Japanese buildings allows them to bend and absorb energy without breaking under stress. 
+<br>
+*Human Experience*: Emotional adaptability and well-developed coping skills (e.g., mindfulness, emotional regulation techniques, therapy) function in a similar way, allowing a person to "bend" with emotional highs and lows without breaking down. These coping skills help an individual manage mood swings in a healthy way, reducing the impact of manic episodes. @cr-image5
 
 ::: {#cr-image5}
 ![](images/ggpagoda5.png)
@@ -101,11 +153,38 @@ Take one minute to reflect on these questions. @cr-questions2]{highlight="1,3"}
 :::
 
 ::: cr-section
-**Base Isolation (Floating Foundations) = Grounded Daily Routine and Stability**
+Take one minute to reflect on these questions. @cr-questions5]{highlight="1,3"}
 
-*Ancient Buildings*: In some ancient structures, the foundation stones allow the building to "float" above the ground, moving slightly with the earthquake rather than fighting against it. This helps absorb the shock and prevent the structure from crumbling. *Human Experience*: A grounded daily routine—including regular sleep, consistent medication, and structured activities—acts like a floating foundation. It gives individuals a stable base from which they can handle mood swings. Routine can absorb the shocks of mood changes and prevent escalation, offering a predictable structure that remains steady even during emotional upheavals. @cr-image6
+::: {#cr-questions5}
+1.	Think about a recent challenge you faced—how did you adapt, and what coping strategies helped you?
+2.	What are your go-to strategies for managing stress, and how well do they work for you?
+3.	How can you develop greater emotional flexibility to handle unexpected changes more effectively?
+:::
+:::
+
+::: cr-section
+<span style="color:#b22222; font-weight:bold; text-align:center; display:block;font-size:1.2em;">
+Base Isolation <br> 
+(Floating Foundations) <br>
+<br>
+Grounded Daily <br>
+Routine and Stability </strong></span>
+
+*Ancient Buildings*: In some ancient structures, the foundation stones allow the building to "float" above the ground, moving slightly with the earthquake rather than fighting against it. This helps absorb the shock and prevent the structure from crumbling. 
+<br>
+*Human Experience*: A grounded daily routine—including regular sleep, consistent medication, and structured activities—acts like a floating foundation. It gives individuals a stable base from which they can handle mood swings. Routine can absorb the shocks of mood changes and prevent escalation, offering a predictable structure that remains steady even during emotional upheavals. @cr-image6
 
 ::: {#cr-image6}
 ![](images/ggpagoda6.png)
+:::
+:::
+
+::: cr-section
+Take one minute to reflect on these questions. @cr-questions6]{highlight="1,3"}
+
+::: {#cr-questions6}
+1.	What routines or habits provide you with a sense of stability in your daily life?
+2.	How does your current routine support (or hinder) your well-being, and what changes would you like to make?
+3.	If your schedule was suddenly disrupted, what steps could you take to regain a sense of stability?
 :::
 :::
