adding link to kit from resources

--- a/resources.qmd
+++ b/resources.qmd
@@ -3,7 +3,7 @@ title: "Resources - Virtual Allotment"
 editor: visual
 ---
 
-At Bipolar Risk, we're excited to introduce a unique and innovative concept -- a "phygital" collaborative space that combines the best of physical and online environments. Inspired by the concept of *community allotments and gardens*, we're creating a dynamic platform for resource exchange and community engagement.
+At Bipolar Risk, we're excited to introduce a unique and innovative concept -- a "phygital" collaborative space that combines the best of physical and online environments. Inspired by the concept of *community allotments and gardens*, we're creating a dynamic platform for resource exchange and community engagement: [The Personalised Recovery and Resilience Kit (PeRRK)](kit.htlm) Also visit the visual and written description of the [pagoda as a metaphor for mental wellness](pagoda_closeread.htlm).
 
 **What You Can Expect:**
 
