fixing minor typo

--- a/kit_spanish.qmd
+++ b/kit_spanish.qmd
@@ -29,7 +29,7 @@ Al reunir el conocimiento fruto de las experiencias de vida de personas con bipo
 
 ***La Metáfora del Terremoto***
 
-Vivir con Bipolaridad puede sentirse como transitar un terreno lleno de terremotos repentinos e impredecibles. Los altibajos en el humor, como si fueran sismos y réplicas, pueden alterar la vida cotidiana y dejar a las personas y sus redes de apoyo tratando de recuperar la estabilidad perdida. ¿Cómo podemos prepararnos para esa incertidumbre al mismo tiempo que fomentar la resiliencia y la recuperación?
+Vivir con el Trastorno Bipolar (TB) puede sentirse como transitar un terreno lleno de terremotos repentinos e impredecibles. Los altibajos en el humor, como si fueran sismos y réplicas, pueden alterar la vida cotidiana y dejar a las personas y sus redes de apoyo tratando de recuperar la estabilidad perdida. ¿Cómo podemos prepararnos para esa incertidumbre al mismo tiempo que fomentar la resiliencia y la recuperación?
 
 
 ![](images/ggpagoda6.png){width=60px style="display:block; margin-left:auto; margin-right:auto;"}
