Making final adjustments to three versions

--- a/kit.qmd
+++ b/kit.qmd
@@ -12,6 +12,8 @@ People living with bipolar face significant risks of engaging in unpredictable, 
 
 This is why we are working on the Personalised Recovery and Resilience Kit (PeRRK), a participatory approach inspired by the precision and wisdom of Japanese craftsmanship. It encapsulates the transformative potential of human-AI collaboration. You may find that Japanese [metaphors](https://en.wikipedia.org/wiki/Metaphor) work well for you, but there are alternative metaphors that will work with the structure of the kit; feel free to personalise your individual kit by creating your own personal metaphor. However, for the purpose of creating a general outline for this kit, we are using the structurally supportive and sound principles of Japanese craftmanship. Below you will find the kit, where you can click on each section to learn more about the different elements.
 
+Access the PeRRK in *Italian* [here](kit_italian.html). <br>
+Access the PeRRK in *Portuguese* [here](kit_portuguese.html). <br>
 Access the PeRRK in *Spanish* [here](kit_spanish.html). 
 
 ------------------------------------------------------------------------
