--- a/kit_spanish.qmd
+++ b/kit_spanish.qmd
@@ -9,7 +9,7 @@ title: "Personalised Recovery and Resilience Kit (PeRRK) - Spanish Version"
 ------------------------------------------------------------------------
 
 
-**The Kit en Español**
+**El Kit en Español**
 
 ::: panel-tabset
 
