--- a/PeRRK_parenting.qmd
+++ b/PeRRK_parenting.qmd
@@ -17,7 +17,7 @@ One useful guide comes from a different field: structural engineering. A Chilean
 
 That stayed with me. It reflects how I’ve come to think about parenting, especially in complex and unequal environments.
 
-The goal is not perfection. It is protection. Not flawless function, but safe and adaptable care. When stress rises, support systems should be in place to prevent collapse and help people stay upright, even if a little cracked, through uncertainty.
+The goal is not perfection. It is protection. Not flawless function, but safe and adaptable care. When stress rises, support systems should be in place to prevent collapse and help people stay upright, even if a little bruised, through uncertainty.
 
 This idea also shapes PeRRK, a flexible framework developed to support recovery and resilience in mental health.
 
@@ -33,7 +33,7 @@ Strong foundations in parenting grow out of everyday life: through moments of af
 
 Just as important as structure is flexibility. In buildings, flexible joints help prevent collapse. In families, the ability to adapt, repair, and hold space for difficult feelings serves the same purpose.
 
-The ability to shift strategies and reconnect after misunderstandings helps families stay strong. These skills are not automatic. They are learned, shared, and shaped by culture. Some traditions emphasise shared caregiving, others focus on independence or guidance. No one way is best, but all benefit from care, respect, and the willingness to grow.
+The ability to shift strategies and reconnect after misunderstandings helps families stay strong. These skills are not automatic. They are learned, shared, and shaped by culture. Some traditions emphasise shared caregiving, others focus on independence or guidance. No single way is best, but all benefit from care, respect, and the willingness to grow.
 
 Support systems also need to be layered, not linear. One caregiver alone cannot carry the whole emotional load. Sustainable parenting depends on shared care. This includes partners, extended family, schools, communities, workplaces, professionals, and, more and more, digital tools.
 
